--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.2.0",
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^8.17.10",
+    "emailjs": "^4.0.3",
     "framer-motion": "^11.15.0",
+    "gsap": "^3.12.5",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.14.0"
+    "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.14.0",
+    "react-vertical-timeline-component": "^3.5.3",
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
