--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
     "react-vertical-timeline-component": "^3.5.3",
+    "resend": "^4.0.1",
     "three": "^0.171.0"
   },
   "devDependencies": {
